assets/css/style.css
/* background colors */

.bg-color-navbar {
    background-color: #000000;
}

.bg-color-emtext {
    background-color: #000000;
}

.bg-color-lyrics {
    background-color: #000000;
}

.bg-bio-heading {
    background-color: #000000;
}

.bg-bio {
    background-color: #000000;
}

.bg-comp {
    background-color: #000000;
}
.bg-tour {
    background-color: #000000;
}

.bg-music {
    background-color: #000000;
}

/* Navbar */

.navfont {
    color: #FFFFFF;
} 

.collapse ul li a {
    transition: all 0.35s ease-in-out;
    -moz-transition: all 0.35s ease-in-out;
    -webkit-transition: all 0.35s ease-in-out;
    -o-transition: all 0.35s ease-in-out;
}

.collapse ul li a:hover {
    color: #8B0000;

}

/* images */


/* heroimage */

.hero-image {
    background-image: url('../images/hero-image.jpg');
    background-size: cover;
    background-position: center;
    width: 100%;
    height: 70vh;
    }

.tour-image-1 {
    width: 90%;
    height: 90%;


}
.tour-image-2 {
    width: 90%;
    height: 90%;


}

.tour-image-3 {
    width: 90%;
    height: 90%;


}
.tour-image-4 {
    width: 90%;
    height: 90%;


}


/* text colors */

/* eminem text in center screen */

.em-text {
    color: #FFFFFF;
    
}

/* biograpghy text */

.bio-header {
    color: #FFFFFF;
}

.bio-paragraph {
    color: #FFFFFF;
}

/* lyrics text */

.lyrics-text {
    color: #FFFFFF;
}

.fade {
    animation-name: fadein;
    animation-duration: 5s;
    animation-iteration-count: infinite;
    animation-timing-function: linear;
    animation-direction: alternate;    

}

.fade-2 {
    animation-name: fadein;
    animation-duration: 10s;
    animation-iteration-count: infinite;
    animation-timing-function: linear;
    animation-direction: alternate;    

}

/* music page text */

.discog-text {
    color: #FFFFFF;
}

/* competition page text */

.comp-text {
    color: #FFFFFF;
}

.tour-text {
    color: #FFFFFF;
}

/* competiton page forms */

/* keyframes */

@keyframes fadein {
    from {
        opacity: 0;
    }
    to {
        opacity: 1;
    }
}


/* footer */

footer {
    background-color: #000000;
}

.social-links {
    padding-top: 50px;
    padding-left: 280px;
    font-size: 25px;
    letter-spacing: 3px;
}

.social-links li a i {
    padding-left: 10px;
    color: #FFFFFF;
    transition: all 0.35s ease-in-out;
    -moz-transition: all 0.35s ease-in-out;
    -webkit-transition: all 0.35s ease-in-out;
    -o-transition: all 0.35s ease-in-out;
}

.social-links li a i:hover {
    color: #8B0000;
}

